# ShopOS

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trufflehog.yaml  AI.md  GETTING_STARTED.md  Makefile  README.md  Tiltfile  atlantis.yaml  docker-compose.yml  lighthouserc.js  renovate.json  skaffold.yaml
.devcontainer/: devcontainer.json  post-create.sh
.devpod/: devpod.yaml
api-management/: README.md
backstage/: README.md  app-config.production.yaml  app-config.yaml  catalog-info.yaml
chaos/: README.md
ci/: README.md
data/: README.md
databases/: README.md
dev/: README.md
docs/: README.md
events/: README.md  analytics.page.viewed.avsc  analytics.product.clicked.avsc  analytics.search.performed.avsc  commerce.cart.abandoned.avsc  commerce.order.cancelled.avsc  commerce.order.fulfilled.avsc  commerce.order.placed.avsc  commerce.payment.failed.avsc  commerce.payment.processed.avsc  identity.user.deleted.avsc  identity.user.registered.avsc  notification.email.requested.avsc  (+8 more)
src/commerce/shipping-service/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
src/commerce/shipping-service/db/migrations/: 001_create_shipments.sql
src/commerce/shipping-service/src/: config.rs  error.rs  main.rs
src/commerce/shipping-service/src/domain/: mod.rs  shipment.rs
src/commerce/shipping-service/src/handler/: mod.rs  shipping_handler.rs
src/commerce/shipping-service/src/service/: mod.rs  shipping_service.rs
src/commerce/shipping-service/src/store/: mod.rs  shipment_store.rs
src/financial/financial-rules-engine/: .env.example  Dockerfile  Makefile  financial-rules-engine.cabal  stack.yaml
src/financial/financial-rules-engine/src/: Main.hs
src/identity/auth-service/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
src/identity/auth-service/db/migrations/: 001_create_auth.sql
src/identity/auth-service/src/: config.rs  error.rs  main.rs
src/identity/auth-service/src/domain/: auth.rs
src/identity/auth-service/src/handler/: auth_handler.rs
src/identity/auth-service/src/service/: auth_service.rs
src/identity/auth-service/src/store/: auth_store.rs
(+7806 files in other folders)
