cabal-version: 2.4
name:          financial-rules-engine
version:       1.0.0
description:   Financial Rules Engine — evaluates and enforces financial business rules
author:        Enterprise Platform
maintainer:    platform@enterprise.com
license:       MIT
build-type:    Simple

executable financial-rules-engine
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base          >= 4.14 && < 5
    , wai            >= 3.2
    , warp           >= 3.3
    , aeson          >= 2.0
    , text           >= 1.2
    , http-types     >= 0.12
    , bytestring     >= 0.10
